Implement anilist mapper and controller
