# src/main/java/com/lbranco/tv_tracker_api/model/Title.java
@@ -1,0 +1,13 @@
+package com.lbranco.tv_tracker_api.model;
+
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@NoArgsConstructor
+public class Title {
+    private String english;
+    private String original;
+}
